--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="css/index.css" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Instagram App</title>
+    <title id="title">Instagram App</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <img style="height: 3rem;" src="https://seeklogo.com/images/I/instagram-new-2016-logo-4773FE3F99-seeklogo.com.png" alt="">
-          <a class="navbar-brand" href="#"><span style="font-family: 'Send Flowers', cursive;">INSTAGRAM APP</span></a>
+          <a class="navbar-brand" href="{% url 'index' %}"><span style="font-family: 'Send Flowers', cursive;">INSTAGRAM APP</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
