--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -1,34 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="css/index.css" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title id="title">Instagram App</title>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <img style="height: 3rem;" src="https://seeklogo.com/images/I/instagram-new-2016-logo-4773FE3F99-seeklogo.com.png" alt="">
-          <a class="navbar-brand" href="{% url 'index' %}"><span style="font-family: 'Send Flowers', cursive;">INSTAGRAM APP</span></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"><span style="font-family: 'Send Flowers', cursive;margin-left:60rem">Sign up</span></a>
+{% load bootstrap5 %}
+
+<div class="container-fluid">
+  <nav class="navbar navbar-default bg-light">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <a class="navbar-brand" href="">
+          <p style="color: black;font-size:35px;"><i class="fa fa-instagram"  aria-hidden="true"></i> Instagram</p>
+        </a>
+       </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <form class="navbar-form" role="search" action="">
+
+              <div class="input-group">
+                <input type="text" width="90%" class="form-control" placeholder="Search" name="search_user">
+                <div style="width:10% ;" class="input-group-btn">
+                  <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                </div>
+              </div>
+
+            </form>
+          </li>
+          <li>
+            <div class="col-sm-6 col-md-6">
+              {% if user.is_authenticated %}
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button"
+              aria-expanded="false">Account
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu" role="menu">
+              <li>
+                <a href="/accounts/password/change">Change Password</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"><span style="font-family: 'Send Flowers', cursive;">Log in</span></a>
+              <li>
+                <a href="{% url 'profile'%}">Profile</a>
               </li>
-             </ul>
-          </div>
-        </div>
-      </nav>
-    
-</body>
-</html>
+              <li>
+                <a href="{% url 'post'%}">Post</a>
+              </li>
+              <li>
+                <a href="/logout">Logout</a>
+              </li>
+            </ul>
+          </li>
+          {% else %}
+          <li>
+            <a class='btn btn-danger' style="color: black;" href="/register">Sigup</a>
+          </li>
+          <li>
+            <a class='btn btn-danger' style="color: black; margin-left:5px" href="/login">Login</a>
+          </li>
+
+          {% endif %}
+      </div>
+      </li>
+      </ul>
+    </div>
+
+</div>
+</nav>
+</div>
