--- a/photos/templates/index.html
+++ b/photos/templates/index.html
@@ -53,7 +53,7 @@
       {% endif %}
     </div> 
     
-    <!-- <div class="col-md-2">
+    <div class="col-md-2">
       <div class="">
         <h2>PEOPLE</h2>
       </div>
@@ -82,5 +82,5 @@
     </div>
     <div class="col-md-3"></div>
   </div>
-</div> -->
+</div>
 {% endblock %}
